AyaSpirit 1.0.1, 2016-09-06
------------------------
- bug fixes

AyaSpirit 1.0.0, 2016-08-11
------------------------
- Initial release