@@ -1,3 +1,0 @@
-jQuery(document).ready(function($) {
- 	$('.wp-full-overlay-sidebar-content').prepend('<a style="width: 75%; margin: 10px auto; display: block; text-align: center;" href="https://ayatemplates.com/product/ayaspiritpro" class="button-primary" target="_blank">{premium-get}</a>'.replace( '{premium-get}', customBtns.proget ) );
-});
