@@ -1,3 +1,7 @@
+AyaSpirit 1.0.2, 2016-09-21
+------------------------
+- bug fixes
+
 AyaSpirit 1.0.1, 2016-09-06
 ------------------------
 - bug fixes
